# graspe-v3

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: led_signals.md
graspe_py/: README.md  environment.yml  pyproject.toml
graspe_py/notebooks/: README.md  calculating_gains.ipynb
graspe_py/src/graspe_py/: interface_sim.py  run_simulation.py
graspe_py/src/graspe_py/comms/: __init__.py  commands.py  serialBridge.py  serial_link.py
graspe_py/src/graspe_py/gui/: app.py  gui.py  main.py  positions.py  serial_controls.py  trajectory.py  visualization.py
graspe_py/src/graspe_py/gui/view/: controlview.py  homeview.py  plotsview.py  robotview.py  serialcontrolview.py  slidersview.py  trajectoryview.py
graspe_py/src/graspe_py/logs/: servo_analysis.ipynb
graspe_py/src/graspe_py/logs/data/servo_test/: 06_09_kp1d5.txt  28_08_dado2.txt  28_08_dado3.txt  28_08_dado_pot.txt  potenciometer_data.csv  teste_em_vazio.txt
graspe_py/src/graspe_py/simulation/: __init__.py  actuator.py  controllers.py  robot_description.py  sim.py
graspe_py/src/graspe_py/trajectory/: __init__.py  joint_trajectory.py  traj_planner.py  workspace_trajectory.py
graspe_py/src/graspe_py/utils/: data_collection.py
lib/Graspe/: Graspe.cpp  Graspe.h
lib/GraspeGPIO/: GraspeGPIO.h
lib/KalmanFilter/: KalmanFilter1D.cpp  KalmanFilter1D.h
lib/MotorController/: MotorController.cpp  MotorController.h
logs/: servo_analysis.ipynb
petercorke_simulation/: calculating_gains.ipynb  environment.yml  interface_sim.py  robot_description.py  run.py  simulation.py  simulation_class.py
src/: main.cpp
(+25 files in other folders)
